Logo text too big on small phones, resolved

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,3 +9,10 @@ nav .brand-logo{
 .delete{
     float: right;
 }
+
+/* Resolves overflow issue with Galaxy S10e and phones with smaller screens */
+@media (max-width:360px){
+    nav .brand-logo{
+        font-size: 1.3rem;
+    }
+  }
